--- a/s2gr2/s2gr2.csproj
+++ b/s2gr2/s2gr2.csproj
@@ -55,6 +55,7 @@
     <Compile Include="NotepadView.Designer.cs">
       <DependentUpon>NotepadView.cs</DependentUpon>
     </Compile>
+    <Compile Include="ServiceLocator.cs" />
     <Compile Include="Shell.cs">
       <SubType>Form</SubType>
     </Compile>
